syntax = "proto3";

package dbconfig;

option go_package = "github.com/hobbyfarm/gargantua/v3/protos/dbconfig";

import "general/general.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service DynamicBindConfigSvc {
    rpc CreateDynamicBindConfig (CreateDynamicBindConfigRequest) returns (google.protobuf.Empty);
    rpc GetDynamicBindConfig (general.ResourceId) returns (DynamicBindConfig);
    rpc UpdateDynamicBindConfig (UpdateDynamicBindConfigRequest) returns (google.protobuf.Empty);
    rpc DeleteDynamicBindConfig (general.ResourceId) returns (google.protobuf.Empty);
    rpc DeleteCollectionDynamicBindConfig (general.ListOptions) returns (google.protobuf.Empty);
    rpc ListDynamicBindConfig (general.ListOptions) returns (ListDynamicBindConfigsResponse);
}

message DynamicBindConfig {
    string id = 1;
    string environment = 2;
    bool restricted_bind = 3;
    string restricted_bind_value = 4;
    map<string, uint32> burst_count_capacity = 5;
    map<string, string> labels = 6;
}

message CreateDynamicBindConfigRequest {
    string se_name = 1;
    string se_uid = 2;
    string env_name = 3;
    map<string, uint32> burst_count_capacity = 4;
    bool restricted_bind = 5;
    string restricted_bind_value = 6;
}

message UpdateDynamicBindConfigRequest {
    string id = 1;
    string environment = 2;
    google.protobuf.BoolValue restricted_bind = 3;
    string restricted_bind_value = 4;
    map<string, uint32> burst_count_capacity = 5;
    map<string, string> labels = 6;
}

message ListDynamicBindConfigsResponse {
    repeated DynamicBindConfig db_config = 1;
}